Finished adaptation of URLCanonicalizer and URLResolver